# olhos-de-aguia

./: .gitignore  README.md  main.py  pyproject.toml
src/: detector.py  logic.py  visualizer.py
